// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposal.supervisor|assessment|viewerCanEvaluate fetches proposal's supervisor|assessment|viewerCanEvaluate authenticated as supervisor 1`] = `
Object {
  "proposal": Object {
    "assessment": Object {
      "body": null,
      "estimatedCost": null,
      "officialResponse": null,
      "state": "IN_PROGRESS",
    },
    "supervisor": Object {
      "firstname": "supervisor",
      "id": "VXNlcjp1c2VyNTIz",
      "lastname": "supervisor",
    },
    "viewerCanEvaluate": true,
  },
}
`;

exports[`Proposal.supervisor|assessment|viewerCanEvaluate fetches proposal's supervisor|assessment|viewerCanEvaluate authenticated as user. 1`] = `
Object {
  "proposal": Object {
    "assessment": null,
    "supervisor": Object {
      "firstname": null,
      "id": "VXNlcjp1c2VyNTIz",
      "lastname": null,
    },
    "viewerCanEvaluate": false,
  },
}
`;

exports[`User.supervisedProposals does not fetches user's supervised proposals when authenticated as user 1`] = `
Object {
  "user": Object {
    "supervisedProposals": null,
  },
}
`;

exports[`User.supervisedProposals fetches user's supervised proposals when authenticated as supervisor. 1`] = `
Object {
  "user": Object {
    "supervisedProposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "assessment": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMTA=",
          },
        },
        Object {
          "node": Object {
            "assessment": Object {
              "body": null,
              "estimatedCost": null,
              "officialResponse": null,
              "state": "IN_PROGRESS",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDk=",
          },
        },
      ],
    },
  },
}
`;
